@startuml MediLink Class Diagram

' Title and Styling
' title MediLink - Telemedicine & Prescription Management System\nClass Diagram

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #F5F5F5
    BackgroundColor<<DTO>> #E3F2FD
    BorderColor Black
    ArrowColor Black
}

package "MediLink.Data" {
    class PatientRecord {
        + PatientID : int
        + FullName : string
        + DOB : DateTime
        + NIK : string
        + MedicalHistory : string
        + PhoneNumber : string
        + EmailAddress : string
        + EmergencyContact : string

        
        + GetBasicInfo() : (int, string)
        + GenerateReport() : string
    }
    
    abstract class User {
        + UserID : int
        + FullName : string
        + AuthToken : string
        + Password : string
        + ValidatePassword(input: bool) : bool
        + GetAuthToken() : string
        + GenerateNewToken() : string
        + ResetPassword(newPassword: string) : void
    }

    class Doctor {
        + SpecialtyID : int
        + MedicalLicenseNumber : string
    }

    class Admin {
        + AccessLevel : int
        + Role : string
    }

    class MedicalSpecialty {
        + SpecialtyID : int
        + Name : string
        + Description : string
        + GetDisplayName() : string
    }
}

package "MediLink.Business" {
    class Prescription {
        + PrescriptionID : Guid
        + PatientID : int
        + DrugName : string
        + Dosage : string
        + DrugCost : decimal
        - _patient : PatientRecord
        - _doctor : Doctor
        
        + Create(patient: PatientRecord, doctor: Doctor) : void
    }
    
    class PrescriptionDTO <<DTO>> {
        + PrescriptionID : Guid
        + PatientID : int
        + DrugName : string
        + Dosage : string
        + PatientNIK : string
        + AuthToken : string
        
        + ToJson() : string
    }

    class Appointment {
        + AppointmentID : Guid
        + PatientID : int
        + DoctorID : int
        + AppointmentDate : DateTime
        + Duration : int
        + Status : string
        + Notes : string
        + Schedule() : void
        + Cancel() : void
        + Reschedule(newDate: DateTime) : void
        + Complete() : void
    }
}

package "MediLink.Services" {
    class PharmacyOrder {
        + OrderID : Guid
        + OrderDate : DateTime
        + Status : string
        + PatientName : string
        + MarkFulfilled() : void
    }
}

Doctor --|> User
Admin --|> User
Doctor --> MedicalSpecialty : references

' Relationships
Prescription "1" *-- "1" PatientRecord : contains
Prescription "1" *-- "1" Doctor : contains
Prescription ..> PrescriptionDTO : creates

PharmacyOrder "1" o-- "1" Prescription : fulfills

Appointment "*" --> "1" PatientRecord : scheduled for
Appointment "*" --> "1" Doctor : with

' ' Class Descriptions
' note right of PatientRecord
'   Stores patient demographic and
'   medical information including
'   personal health records.
' end note

' note right of Doctor
'   Manages doctor credentials
'   and authentication information
'   for prescription authorization.
' end note

' note bottom of Prescription
'   Central business entity that
'   links patients and doctors for
'   prescription management.
' end note

' note left of PharmacyAdapter
'   Handles prescription fulfillment.
'   Pharmacist receives and marks
'   prescriptions as fulfilled.
' end note

' note bottom of PrescriptionDTO
'   Data transfer object used
'   for pharmacy communication.
' end note

' note left of AuditLogger
'   Utility class for system
'   audit logging.
' end note

@enduml
